# fishify-old

./: Cargo.toml  readme.md
src/: main.rs
src/commands/: connect.rs  devices.rs  info.rs  list.rs  mod.rs  pause.rs  play.rs  queue.rs  refresh.rs  resume.rs  search.rs  set.rs  skip.rs  status.rs
